--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -7,7 +7,6 @@
     <string name="weight">Gewicht</string>
     <string name="time">Tijd</string>
     <string name="distance">Afstand</string>
-    <string name="unnamed_exercise">Naamloos</string>
     <string name="pick_exercise">Een taak selecteren</string>
     <string name="log_reps">Log herhalingen</string>
     <string name="log_weight">Log Gewicht</string>
@@ -15,10 +14,9 @@
     <string name="tab_routines">Richtlijnen</string>
     <string name="log_time">Log tijd</string>
     <string name="log_distance">Log afstand</string>
-    <string name="tab_settings">Instelling</string>
+    <string name="settings">Instelling</string>
     <string name="add_set">Instellen Toevoegen</string>
     <string name="alert_no_log_value_selected">Selecteer minstens één waarde.</string>
-    <string name="unnamed_workout">Naamloos</string>
     <string name="tab_workouts">Geschiedenis</string>
     <string name="reps">Wiederholungen</string>
 </resources>
