--- a/app/src/main/res/values-da/strings.xml
+++ b/app/src/main/res/values-da/strings.xml
@@ -3,7 +3,6 @@
     <string name="unnamed_routine">Unavngiven</string>
     <string name="confirm_delete">Vil du slette %1$s \?</string>
     <string name="add_set">Tilføj Sæt</string>
-    <string name="unnamed_exercise">Unavngiven</string>
     <string name="pick_exercise">Vælg Øvelse</string>
     <string name="distance">Afstand</string>
     <string name="time">Tid</string>
@@ -15,8 +14,7 @@
     <string name="tab_routines">Rutine</string>
     <string name="tab_workouts">Historie</string>
     <string name="tab_exercises">Konditræning</string>
-    <string name="tab_settings">Indstilling</string>
-    <string name="unnamed_workout">Unavngiven</string>
+    <string name="settings">Indstilling</string>
     <string name="alert_no_log_value_selected">Vælg mindst valuen værdi.</string>
     <string name="yes">Ja</string>
     <string name="cancel">Annullere</string>
