--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -6,17 +6,15 @@
     <string name="weight">Gewicht</string>
     <string name="distance">Strecke</string>
     <string name="alert_no_log_value_selected">Bitte wähle mindestens einen Wert aus.</string>
-    <string name="tab_settings">Einstellungen</string>
+    <string name="settings">Einstellungen</string>
     <string name="unnamed_routine">Unbenannt</string>
     <string name="confirm_delete">Möchtest du %1$s löschen\?</string>
     <string name="add_set">Satz hinzufügen</string>
     <string name="reps">Wiederholungen</string>
-    <string name="unnamed_exercise">Unbenannt</string>
     <string name="log_weight">Gewicht protokollieren</string>
     <string name="log_reps">Wiederholungen protokollieren</string>
     <string name="log_distance">Distanz protokollieren</string>
     <string name="tab_workouts">Historie</string>
-    <string name="unnamed_workout">Unbenannt</string>
     <string name="pick_exercise">Übung auswählen</string>
     <string name="tab_exercises">Übungen</string>
     <string name="tab_routines">Trainingspläne</string>
