--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -8,14 +8,12 @@
     <string name="cancel">Cancelar</string>
     <string name="yes">Sí</string>
     <string name="unnamed_routine">Sin nombre</string>
-    <string name="unnamed_exercise">Sin nombre</string>
     <string name="pick_exercise">Pick Ejercicio</string>
     <string name="log_distance">Registro de distancia</string>
     <string name="log_time">Registro de tiempo</string>
     <string name="log_weight">Registro de peso</string>
     <string name="log_reps">Registro de repeticiones</string>
-    <string name="tab_settings">Configuración</string>
-    <string name="unnamed_workout">Sin nombre</string>
+    <string name="settings">Configuración</string>
     <string name="tab_workouts">Historia</string>
     <string name="tab_exercises">Ejercicio</string>
     <string name="tab_routines">Rutina</string>
