--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,4 +45,6 @@
     <string name="pop_back">Back</string>
     <string name="persistent_workout_channel_description">These notifications are shown while you are working out, so you know that your workout is still running.</string>
     <string name="persistent_workout_channel_name">Ongoing Workout Notification</string>
+    <string name="workout_notification_title">Workout in progress</string>
+    <string name="workout_notification_text">Tap to return to your workout</string>
 </resources>
