--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -1,22 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="distance">Distancia</string>
-    <string name="time">Tiempo</string>
-    <string name="weight">Peso</string>
-    <string name="add_set">Añadir conjunto</string>
-    <string name="confirm_delete">Desea eliminar %1$s \?</string>
-    <string name="cancel">Cancelar</string>
+    <string name="col_distance">Distancia</string>
+    <string name="col_time">Tiempo</string>
+    <string name="col_weight">Peso</string>
+    <string name="btn_add_set">Añadir conjunto</string>
+    <string name="dialog_delete_title">Desea eliminar %1$s \?</string>
+    <string name="btn_cancel">Cancelar</string>
     <string name="yes">Sí</string>
     <string name="unnamed_routine">Sin nombre</string>
-    <string name="pick_exercise">Pick Ejercicio</string>
-    <string name="log_distance">Registro de distancia</string>
-    <string name="log_time">Registro de tiempo</string>
-    <string name="log_weight">Registro de peso</string>
-    <string name="log_reps">Registro de repeticiones</string>
-    <string name="settings">Configuración</string>
-    <string name="tab_workouts">Historia</string>
-    <string name="tab_exercises">Ejercicio</string>
-    <string name="tab_routines">Rutina</string>
+    <string name="screen_pick_exercise">Pick Ejercicio</string>
+    <string name="checkbox_log_distance">Registro de distancia</string>
+    <string name="checkbox_log_time">Registro de tiempo</string>
+    <string name="checkbox_log_weight">Registro de peso</string>
+    <string name="checkbox_log_reps">Registro de repeticiones</string>
+    <string name="screen_settings">Configuración</string>
+    <string name="screen_workout_history">Historia</string>
+    <string name="screen_exercise_list">Ejercicio</string>
+    <string name="screen_routine_list">Rutina</string>
     <string name="alert_no_log_value_selected">Seleccione al menos un valor.</string>
-    <string name="reps">Representante</string>
+    <string name="col_reps">Representante</string>
 </resources>
