--- a/app/src/main/res/values-sv/strings.xml
+++ b/app/src/main/res/values-sv/strings.xml
@@ -2,21 +2,21 @@
 <resources>
     <string name="unnamed_routine">Anonym</string>
     <string name="yes">Ja</string>
-    <string name="settings">Inställning</string>
-    <string name="tab_workouts">Historia</string>
-    <string name="tab_exercises">Övningar</string>
-    <string name="tab_routines">Rutin</string>
+    <string name="screen_settings">Inställning</string>
+    <string name="screen_workout_history">Historia</string>
+    <string name="screen_exercise_list">Övningar</string>
+    <string name="screen_routine_list">Rutin</string>
     <string name="alert_no_log_value_selected">Välj minst ett värde.</string>
-    <string name="pick_exercise">Plocka Motion</string>
-    <string name="distance">Avstånd</string>
-    <string name="time">Tid</string>
-    <string name="weight">Vikt</string>
-    <string name="add_set">Lägg Set</string>
-    <string name="confirm_delete">Vill du ta bort %1$s \?</string>
-    <string name="log_distance">Avstånd log</string>
-    <string name="log_time">Tidslogg</string>
-    <string name="log_weight">Vikt log</string>
-    <string name="log_reps">Repetitioner logga in</string>
-    <string name="reps">Repetitioner</string>
-    <string name="cancel">Avbryta</string>
+    <string name="screen_pick_exercise">Plocka Motion</string>
+    <string name="col_distance">Avstånd</string>
+    <string name="col_time">Tid</string>
+    <string name="col_weight">Vikt</string>
+    <string name="btn_add_set">Lägg Set</string>
+    <string name="dialog_delete_title">Vill du ta bort %1$s \?</string>
+    <string name="checkbox_log_distance">Avstånd log</string>
+    <string name="checkbox_log_time">Tidslogg</string>
+    <string name="checkbox_log_weight">Vikt log</string>
+    <string name="checkbox_log_reps">Repetitioner logga in</string>
+    <string name="col_reps">Repetitioner</string>
+    <string name="btn_cancel">Avbryta</string>
 </resources>
