--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,32 +19,38 @@
     <string name="app_name" translatable="false">GymRoutines</string>
     <string name="unnamed_routine">Unnamed</string>
     <string name="yes">Yes</string>
-    <string name="cancel">Cancel</string>
-    <string name="confirm_delete">Do you want to delete %1$s\?</string>
-    <string name="add_set">Add Set</string>
-    <string name="reps">Reps</string>
-    <string name="weight">Weight</string>
-    <string name="time">Time</string>
-    <string name="distance">Distance</string>
-    <string name="pick_exercise">Pick Exercise</string>
+    <string name="btn_cancel">Cancel</string>
+    <string name="dialog_delete_title">Do you want to delete %1$s\?</string>
+    <string name="btn_add_set">Add Set</string>
+    <string name="col_reps">Reps</string>
+    <string name="col_weight">Weight</string>
+    <string name="col_time">Time</string>
+    <string name="col_distance">Distance</string>
+    <string name="screen_pick_exercise">Pick Exercise</string>
     <string name="alert_no_log_value_selected">Please select at least one value.</string>
-    <string name="log_reps">Log Reps</string>
-    <string name="log_weight">Log Weight</string>
-    <string name="log_time">Log Time</string>
-    <string name="log_distance">Log Distance</string>
-    <string name="tab_routines">Routines</string>
-    <string name="tab_exercises">Exercises</string>
-    <string name="tab_workouts">History</string>
-    <string name="settings">Settings</string>
-    <string name="new_exercise">New Exercise</string>
-    <string name="tab_insights">Insights</string>
-    <string name="license_notice" translatable="false">GymRoutines\nCopyright © 2020  Noah Jutz\n\nThis program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.\n\nThis program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.\n\nYou should have received a copy of the GNU General Public License along with this program.  If not, see https://www.gnu.org/licenses/.</string>
+    <string name="checkbox_log_reps">Log Reps</string>
+    <string name="checkbox_log_weight">Log Weight</string>
+    <string name="checkbox_log_time">Log Time</string>
+    <string name="checkbox_log_distance">Log Distance</string>
+    <string name="screen_routine_list">Routines</string>
+    <string name="screen_exercise_list">Exercises</string>
+    <string name="screen_workout_history">History</string>
+    <string name="screen_settings">Settings</string>
+    <string name="btn_new_exercise">New Exercise</string>
+    <string name="screen_insights">Insights</string>
+    <string name="app_license" translatable="false">GymRoutines\nCopyright © 2020  Noah Jutz\n\nThis program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.\n\nThis program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.\n\nYou should have received a copy of the GNU General Public License along with this program.  If not, see https://www.gnu.org/licenses/.</string>
     <string name="theme_follow_system">Follow System</string>
     <string name="theme_light">Light</string>
     <string name="theme_dark">Dark</string>
-    <string name="pop_back">Back</string>
-    <string name="persistent_workout_channel_description">These notifications are shown while you are working out, so you know that your workout is still running.</string>
-    <string name="persistent_workout_channel_name">Ongoing Workout Notification</string>
-    <string name="workout_notification_title">Workout in progress</string>
-    <string name="workout_notification_text">Tap to return to your workout</string>
+    <string name="btn_pop_back">Back</string>
+    <string name="notification_channel_persistent_description">These notifications are shown while you are working out, so you know that your workout is still running.</string>
+    <string name="notification_channel_persistent_name">Ongoing Workout Notification</string>
+    <string name="notification_persistent_title">Workout in progress</string>
+    <string name="notification_persistent_text">Tap to return to your workout</string>
+    <string name="hint_search">Search</string>
+    <string name="btn_clear_text">Clear</string>
+    <string name="dialog_discard_title">Discard changes?</string>
+    <string name="dialog_discard_confirm">Discard</string>
+    <string name="screen_edit_exercise">Edit Exercise</string>
+    <string name="btn_save">Save</string>
 </resources>
