--- a/app/src/main/res/values-eu/strings.xml
+++ b/app/src/main/res/values-eu/strings.xml
@@ -2,21 +2,21 @@
 <resources>
     <string name="unnamed_routine">Izenik</string>
     <string name="yes">Bai</string>
-    <string name="cancel">Utzi</string>
-    <string name="add_set">Gehitu Ezarri</string>
-    <string name="weight">Pisua</string>
-    <string name="time">Denbora</string>
-    <string name="distance">Distantzia</string>
-    <string name="pick_exercise">Aukeratu Ariketa</string>
+    <string name="btn_cancel">Utzi</string>
+    <string name="btn_add_set">Gehitu Ezarri</string>
+    <string name="col_weight">Pisua</string>
+    <string name="col_time">Denbora</string>
+    <string name="col_distance">Distantzia</string>
+    <string name="screen_pick_exercise">Aukeratu Ariketa</string>
     <string name="alert_no_log_value_selected">Mesedez, hautatu, gutxienez balio bat.</string>
-    <string name="tab_routines">Errutinak</string>
-    <string name="tab_exercises">Ariketak</string>
-    <string name="tab_workouts">Historia</string>
-    <string name="settings">Ezarpenak</string>
-    <string name="log_reps">Errepikapen saioa</string>
-    <string name="log_weight">Pisu saioa</string>
-    <string name="log_time">Denbora saioa</string>
-    <string name="log_distance">Distantzia saioa</string>
-    <string name="reps">Errepikapenak</string>
-    <string name="confirm_delete">Ez ezabatu nahi duzula %1$s\?</string>
+    <string name="screen_routine_list">Errutinak</string>
+    <string name="screen_exercise_list">Ariketak</string>
+    <string name="screen_workout_history">Historia</string>
+    <string name="screen_settings">Ezarpenak</string>
+    <string name="checkbox_log_reps">Errepikapen saioa</string>
+    <string name="checkbox_log_weight">Pisu saioa</string>
+    <string name="checkbox_log_time">Denbora saioa</string>
+    <string name="checkbox_log_distance">Distantzia saioa</string>
+    <string name="col_reps">Errepikapenak</string>
+    <string name="dialog_delete_title">Ez ezabatu nahi duzula %1$s\?</string>
 </resources>
