--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -1,22 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="unnamed_routine">Senza nome</string>
-    <string name="tab_workouts">Storia</string>
-    <string name="tab_exercises">Esercizi</string>
-    <string name="tab_routines">Routine</string>
-    <string name="pick_exercise">Scegliere l\'esercizio</string>
-    <string name="distance">Distanza</string>
-    <string name="time">Tempo</string>
-    <string name="weight">Peso</string>
-    <string name="add_set">Aggiungi set</string>
-    <string name="confirm_delete">Vuoi cancellare %1$s \?</string>
-    <string name="cancel">Cancella</string>
+    <string name="screen_workout_history">Storia</string>
+    <string name="screen_exercise_list">Esercizi</string>
+    <string name="screen_routine_list">Routine</string>
+    <string name="screen_pick_exercise">Scegliere l\'esercizio</string>
+    <string name="col_distance">Distanza</string>
+    <string name="col_time">Tempo</string>
+    <string name="col_weight">Peso</string>
+    <string name="btn_add_set">Aggiungi set</string>
+    <string name="dialog_delete_title">Vuoi cancellare %1$s \?</string>
+    <string name="btn_cancel">Cancella</string>
     <string name="yes">Sì</string>
-    <string name="log_distance">Distanza log</string>
-    <string name="log_time">Tempo di log</string>
-    <string name="log_weight">Peso record</string>
-    <string name="reps">Ripete</string>
-    <string name="settings">Impostazioni</string>
+    <string name="checkbox_log_distance">Distanza log</string>
+    <string name="checkbox_log_time">Tempo di log</string>
+    <string name="checkbox_log_weight">Peso record</string>
+    <string name="col_reps">Ripete</string>
+    <string name="screen_settings">Impostazioni</string>
     <string name="alert_no_log_value_selected">Seleziona almeno un valore.</string>
-    <string name="log_reps">Registrare Ripete</string>
+    <string name="checkbox_log_reps">Registrare Ripete</string>
 </resources>
