--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,7 +26,6 @@
     <string name="col_weight">Weight</string>
     <string name="col_time">Time</string>
     <string name="col_distance">Distance</string>
-    <string name="screen_pick_exercise">Pick Exercise</string>
     <string name="alert_no_log_value_selected">Please select at least one value.</string>
     <string name="checkbox_log_reps">Log Reps</string>
     <string name="checkbox_log_weight">Log Weight</string>
@@ -53,4 +52,10 @@
     <string name="dialog_discard_confirm">Discard</string>
     <string name="screen_edit_exercise">Edit Exercise</string>
     <string name="btn_save">Save</string>
+    <string name="label_exercise_name">Exercise name</string>
+    <string name="label_exercise_notes">Notes</string>
+    <string name="btn_more">More</string>
+    <string name="btn_delete">Delete</string>
+    <string name="screen_pick_exercise">Pick Exercise</string>
+    <string name="btn_select_exercises">Select</string>
 </resources>
