--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -66,4 +66,12 @@
     <string name="btn_move_down">Move Down</string>
     <string name="btn_add_exercise">Add Exercise</string>
     <string name="btn_new_routine">New Routine</string>
+    <string name="screen_about">About</string>
+    <string name="label_app_version">Version</string>
+    <string name="label_app_licenses">Licenses</string>
+    <string name="label_app_source_code">Source Code</string>
+    <string name="label_contact">Contact</string>
+    <string name="screen_licenses">Licenses</string>
+    <string name="title_dependencies_list">Open-Source Dependencies</string>
+    <string name="btn_open_in_browser">Open in browser</string>
 </resources>
